--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "buildlib": "webpack --config webpack.build.lib.config.js",
         "builddll": "webpack --config webpack.dll.config.js",
         "build": "rimraf dist && mkdir dist && rsync -va -progress  ./src/* ./dist && babel --presets=es2015,stage-0,react  --plugins=transform-decorators-legacy src --out-dir dist",
-        "test-watch": "export NODE_ENV=test && ./node_modules/.bin/ava --watch"
+        "test-watch": "export NODE_ENV=test && ./node_modules/.bin/ava --watch",
+        "test": "ava"
     },
     "keywords": [],
     "license": "ISC",
@@ -21,12 +22,12 @@
         "url": "https://github.com/ximing/dxexcel-state"
     },
     "devDependencies": {
-        "autoprefixer": "^7.1.4",
+        "autoprefixer": "^7.2.3",
         "ava": "^0.24.0",
         "babel-core": "^6.26.0",
-        "babel-eslint": "^8.0.1",
+        "babel-eslint": "^8.1.2",
         "babel-loader": "7.1.2",
-        "babel-plugin-import": "^1.6.0",
+        "babel-plugin-import": "^1.6.3",
         "babel-plugin-syntax-async-functions": "^6.13.0",
         "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-plugin-transform-export-extensions": "^6.22.0",
@@ -37,34 +38,34 @@
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
         "babel-runtime": "^6.26.0",
-        "cross-env": "^5.0.5",
+        "cross-env": "^5.1.3",
         "css-loader": "^0.28.7",
         "env-cmd": "^7.0.0",
-        "eslint": "^4.8.0",
-        "eslint-plugin-react": "^7.4.0",
-        "file-loader": "^1.1.4",
+        "eslint": "^4.14.0",
+        "eslint-plugin-react": "^7.5.1",
+        "file-loader": "^1.1.6",
         "friendly-errors-webpack-plugin": "^1.6.1",
         "html-webpack-plugin": "^2.30.1",
-        "node-sass": "^4.5.3",
-        "postcss": "^6.0.12",
+        "node-sass": "^4.7.2",
+        "postcss": "^6.0.14",
         "postcss-clearfix": "^2.0.1",
-        "postcss-loader": "^2.0.6",
+        "postcss-loader": "^2.0.9",
         "postcss-position": "^1.0.0",
         "postcss-size": "^2.0.0",
-        "rabjs": "^3.3.0",
-        "react": "^16.0.0",
-        "react-dom": "^16.0.0",
-        "react-hot-loader": "^3.0.0-beta.7",
-        "regenerator-runtime": "^0.11.0",
+        "rabjs": "^4.2.1",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
+        "react-hot-loader": "^3.1.3",
+        "regenerator-runtime": "^0.11.1",
         "rimraf": "^2.6.2",
         "sass-loader": "^6.0.6",
-        "style-loader": "^0.18.2",
-        "url-loader": "^0.5.9",
-        "webpack": "^3.6.0",
-        "webpack-dev-server": "^2.9.1"
+        "style-loader": "^0.19.1",
+        "url-loader": "^0.6.2",
+        "webpack": "^3.10.0",
+        "webpack-dev-server": "^2.9.7"
     },
     "files": [
-        "dist",
+        "packages",
         "src",
         "example",
         "README.md"
@@ -75,15 +76,15 @@
     },
     "ava": {
         "files": [
-            "test/*.js",
-            "!**/not-this-file.js"
+            "test/*.js"
         ],
         "source": [
             "**/*.{js,jsx}",
-            "!dist/**/*"
+            "!dist/**/*",
+            "!node_modules/**/*"
         ],
         "match": [
-            "*oo",
+            "*",
             "!foo"
         ],
         "concurrency": 5,
