--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "builddll": "webpack --config webpack.dll.config.js",
         "build": "rimraf dist && mkdir dist && rsync -va -progress  ./src/* ./dist && babel --presets=es2015,stage-0,react  --plugins=transform-decorators-legacy src --out-dir dist",
         "test-watch": "export NODE_ENV=test && ./node_modules/.bin/ava --watch",
-        "test": "ava"
+        "test": "export NODE_ENV=test && ava"
     },
     "keywords": [],
     "license": "ISC",
