--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "dxexcel-state",
+    "name": "xmexcel",
     "version": "1.0.0",
     "description": "excel state",
     "author": "ximing",
@@ -47,7 +47,7 @@
         "friendly-errors-webpack-plugin": "^1.6.1",
         "html-webpack-plugin": "^2.30.1",
         "node-sass": "^4.7.2",
-        "postcss": "^6.0.14",
+        "postcss": "^6.0.15",
         "postcss-clearfix": "^2.0.1",
         "postcss-loader": "^2.0.9",
         "postcss-position": "^1.0.0",
@@ -99,7 +99,6 @@
         "babel": "inherit"
     },
     "dependencies": {
-        "immutable": "^3.8.2",
         "lodash": "^4.17.4",
         "shortid": "^2.2.8"
     }
