--- a/packages/view/package.json
+++ b/packages/view/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crel": "^3.1.0",
     "hot-formula-parser": "^2.3.1",
     "moment": "^2.20.1",
     "numbro": "^1.11.1",
