--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "xmexcel",
-    "version": "1.0.0",
+    "name": "xmexcel-model",
+    "version": "0.0.1",
     "description": "excel state",
     "author": "ximing",
     "main": "./dist/index.js",
