--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "xmexcel-model",
-    "version": "0.0.1",
+    "version": "0.0.3",
     "description": "excel state",
     "author": "ximing",
     "main": "./dist/index.js",
@@ -67,6 +67,7 @@
     "files": [
         "packages",
         "src",
+        "dist",
         "example",
         "README.md"
     ],
