--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "buildlib": "webpack --config webpack.build.lib.config.js",
         "builddll": "webpack --config webpack.dll.config.js",
         "build": "rimraf dist && mkdir dist && rsync -va -progress  ./src/* ./dist && babel --presets=es2015,stage-0,react  --plugins=transform-decorators-legacy src --out-dir dist",
-        "test-watch": "export NODE_ENV=test && ./node_modules/.bin/ava --watch",
-        "test": "export NODE_ENV=test && ava"
+        "test-watch": "export NODE_ENV=test && ava --watch",
+        "test": "export NODE_ENV=test && nyc ava"
     },
     "keywords": [],
     "license": "ISC",
@@ -47,6 +47,7 @@
         "friendly-errors-webpack-plugin": "^1.6.1",
         "html-webpack-plugin": "^2.30.1",
         "node-sass": "^4.7.2",
+        "nyc": "^11.4.1",
         "postcss": "^6.0.16",
         "postcss-clearfix": "^2.0.1",
         "postcss-loader": "^2.0.10",
