--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
     "name": "xmexcel-model",
-    "version": "1.1.1",
-    "description": "excel state",
+    "version": "1.2.0",
+    "description": "A excel transform for realtime collaboration write by javascript",
     "author": "ximing",
     "main": "./dist/index.js",
     "scripts": {
         "i": "SASS_BINARY_SITE=https://npm.taobao.org/mirrors/node-sass/ npm install --registry=https://registry.npm.taobao.org",
         "dev": "./node_modules/.bin/webpack-dev-server ",
-        "prepublish": "npm run build",
         "builddemo": "webpack --config webpack.build.demo.config.js",
         "buildlib": "webpack --config webpack.build.lib.config.js",
         "builddll": "webpack --config webpack.dll.config.js",
@@ -22,48 +21,67 @@
         "url": "https://github.com/ximing/dxexcel-state"
     },
     "devDependencies": {
-        "autoprefixer": "^7.2.5",
-        "ava": "^0.25.0",
-        "babel-core": "^6.26.0",
-        "babel-eslint": "^8.2.1",
-        "babel-loader": "7.1.2",
-        "babel-plugin-import": "^1.6.3",
-        "babel-plugin-syntax-async-functions": "^6.13.0",
-        "babel-plugin-transform-decorators-legacy": "^1.3.4",
-        "babel-plugin-transform-export-extensions": "^6.22.0",
-        "babel-plugin-transform-regenerator": "^6.26.0",
-        "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-polyfill": "^6.26.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-stage-0": "^6.24.1",
-        "babel-runtime": "^6.26.0",
-        "cross-env": "^5.1.3",
-        "css-loader": "^0.28.9",
-        "env-cmd": "^7.0.0",
-        "eslint": "^4.16.0",
-        "eslint-plugin-react": "^7.6.0",
-        "file-loader": "^1.1.6",
-        "friendly-errors-webpack-plugin": "^1.6.1",
-        "html-webpack-plugin": "^2.30.1",
-        "node-sass": "^4.7.2",
-        "nyc": "^11.4.1",
-        "postcss": "^6.0.16",
+        "@ava/babel-preset-stage-4": "^2.0.0",
+        "@babel/cli": "^7.2.3",
+        "@babel/core": "^7.2.2",
+        "@babel/helper-module-imports": "^7.0.0",
+        "@babel/plugin-external-helpers": "^7.2.0",
+        "@babel/plugin-proposal-class-properties": "^7.3.0",
+        "@babel/plugin-proposal-decorators": "^7.3.0",
+        "@babel/plugin-proposal-do-expressions": "^7.2.0",
+        "@babel/plugin-proposal-export-default-from": "^7.2.0",
+        "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+        "@babel/plugin-proposal-function-bind": "^7.2.0",
+        "@babel/plugin-proposal-function-sent": "^7.2.0",
+        "@babel/plugin-proposal-json-strings": "^7.2.0",
+        "@babel/plugin-proposal-logical-assignment-operators": "^7.2.0",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.2.0",
+        "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+        "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+        "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+        "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
+        "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+        "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+        "@babel/plugin-syntax-import-meta": "^7.2.0",
+        "@babel/plugin-transform-runtime": "^7.2.0",
+        "@babel/preset-env": "^7.3.1",
+        "@babel/preset-react": "^7.0.0",
+        "@babel/register": "^7.0.0",
+        "@babel/types": "^7.3.2",
+        "autoprefixer": "^9.4.7",
+        "ava": "^1.2.1",
+        "babel-eslint": "^10.0.1",
+        "babel-loader": "^8.0.5",
+        "babel-plugin-lodash": "^3.3.4",
+        "babel-plugin-module-resolver": "^3.2.0",
+        "babel-plugin-transform-decorators-legacy": "^1.3.5",
+        "cross-env": "^5.2.0",
+        "css-loader": "^2.1.0",
+        "env-cmd": "^8.0.2",
+        "eslint": "^5.13.0",
+        "eslint-plugin-react": "^7.12.4",
+        "file-loader": "^3.0.1",
+        "friendly-errors-webpack-plugin": "^1.7.0",
+        "html-webpack-plugin": "^3.2.0",
+        "node-sass": "^4.11.0",
+        "nyc": "^13.2.0",
+        "postcss": "^7.0.14",
         "postcss-clearfix": "^2.0.1",
-        "postcss-loader": "^2.0.10",
+        "postcss-loader": "^3.0.0",
         "postcss-position": "^1.0.0",
-        "postcss-size": "^2.0.0",
+        "postcss-size": "^3.0.0",
         "rabjs": "^3.6.1",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
-        "react-hot-loader": "^3.1.3",
-        "regenerator-runtime": "^0.11.1",
-        "rimraf": "^2.6.2",
-        "sass-loader": "^6.0.6",
-        "style-loader": "^0.20.1",
-        "url-loader": "^0.6.2",
-        "webpack": "^3.10.0",
-        "webpack-dev-server": "^2.11.1"
+        "react": "^16.8.1",
+        "react-dom": "^16.8.1",
+        "react-hot-loader": "^4.6.5",
+        "regenerator-runtime": "^0.13.1",
+        "rimraf": "^2.6.3",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1",
+        "url-loader": "^1.1.2",
+        "webpack": "^4.29.3",
+        "webpack-cli": "^3.2.3",
+        "webpack-dev-server": "^3.1.14"
     },
     "files": [
         "packages",
@@ -82,27 +100,37 @@
             "test/change/*.js",
             "test/*.js"
         ],
-        "source": [
-            "src/**/*.{js,jsx}",
-            "test/*.js",
-            "!dist/**/*",
-            "!node_modules/**/*"
+        "sources": [
+            "**/*.{js,jsx}",
+            "!dist/**/*"
         ],
         "match": [
-            "*",
-            "!foo"
+           "*oo",
+			"!foo"
         ],
-        "concurrency": 5,
-        "failFast": true,
-        "failWithoutAssertions": false,
-        "tap": true,
-        "powerAssert": false,
-        "require": [
-            "babel-register"
-        ],
-        "babel": "inherit"
+        "cache": false,
+		"concurrency": 5,
+		"failFast": true,
+		"failWithoutAssertions": false,
+		"tap": true,
+		"verbose": true,
+		"compileEnhancements": false,
+		"require": [
+			"@babel/register"
+		],
+        "babel":{
+            "extensions": [
+				"js",
+				"jsx"
+			],
+            "testOptions": {
+                "babelrc": true,
+                "configFile": false
+            }
+        }
     },
     "dependencies": {
+        "@babel/runtime": "^7.3.1",
         "lodash": "^4.17.5",
         "shortid": "^2.2.8"
     }
