--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,7 @@
             "ie >= 11"
           ]
         },
-        "modules": false,
+        "modules": "commonjs",
         "debug": false,
         "spec": false,
         "loose": false,
@@ -25,18 +25,13 @@
   ],
   "comments": false,
   "env": {
-    "production":{
+    "test":{
       "presets": [
         [
           "@babel/preset-env",
           {
             "targets": {
-              "browsers": [
-                "safari >= 9",
-                "android >= 4.1",
-                "chrome >= 50",
-                "ie >= 11"
-              ]
+              "node": "current"
             },
             "modules": "commonjs",
             "debug": false,
@@ -48,33 +43,7 @@
             "forceAllTransforms": false
           }
         ]
-      ]
-    },
-    "test":{
-      "presets": [
-    "@babel/react",
-    [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "browsers": [
-            "safari >= 9",
-            "android >= 4.1",
-            "chrome >= 50",
-            "ie >= 11"
-          ]
-        },
-        "modules": "commonjs",
-        "debug": false,
-        "spec": false,
-        "loose": false,
-        "useBuiltIns": false,
-        "include": [],
-        "exclude": [],
-        "forceAllTransforms": false
-      }
-    ]
-  ],
+      ],
     }
   },
   "plugins": [
@@ -96,12 +65,6 @@
     "@babel/plugin-proposal-export-default-from",
     "@babel/plugin-proposal-logical-assignment-operators",
     "@babel/plugin-proposal-optional-chaining",
-    [
-      "@babel/plugin-proposal-pipeline-operator",
-      {
-        "proposal": "minimal"
-      }
-    ],
     "@babel/plugin-proposal-nullish-coalescing-operator",
     "@babel/plugin-proposal-do-expressions",
     "@babel/plugin-proposal-function-bind"
