--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "builddemo": "webpack --config webpack.build.demo.config.js",
         "buildlib": "webpack --config webpack.build.lib.config.js",
         "builddll": "webpack --config webpack.dll.config.js",
-        "build": "rimraf dist && mkdir dist && rsync -va -progress  ./src/* ./dist && babel --presets=es2015,stage-0,react  --plugins=transform-decorators-legacy src --out-dir dist",
+        "build": "rimraf dist && mkdir dist && rsync -va -progress  ./src/* ./dist && babel src --out-dir dist",
         "test-watch": "export NODE_ENV=test && ava --watch",
         "test": "export NODE_ENV=test && nyc ava"
     },
@@ -96,40 +96,71 @@
     },
     "ava": {
         "files": [
-            "test/change/op/*.js",
-            "test/change/*.js",
-            "test/*.js"
+            "test/**/*.js",
+            "!test/lib/*.js",
+            "!test/change/op/error/*.js"
         ],
         "sources": [
-            "**/*.{js,jsx}",
-            "!dist/**/*"
-        ],
-        "match": [
-           "*oo",
-			"!foo"
+            "src/**/*.js"
         ],
         "cache": false,
-		"concurrency": 5,
-		"failFast": true,
-		"failWithoutAssertions": false,
-		"tap": true,
-		"verbose": true,
-		"compileEnhancements": false,
-		"require": [
-			"@babel/register"
-		],
-        "babel":{
+        "concurrency": 4,
+        "failFast": true,
+        "failWithoutAssertions": false,
+        "tap": true,
+        "verbose": true,
+        "compileEnhancements": false,
+        "require": [
+            "./test/_register.js"
+        ],
+        "babel": {
             "extensions": [
-				"js",
-				"jsx"
-			],
+                "js"
+            ],
             "testOptions": {
-                "babelrc": true,
+                "presets": [
+                   [ "@babel/preset-env",{
+                    "targets": {
+                      "node": "current"
+                    },
+                    "modules": false,
+                    "debug": false,
+                    "spec": false,
+                    "loose": false,
+                    "useBuiltIns": false,
+                    "include": [],
+                    "exclude": [],
+                    "forceAllTransforms": false
+                  }]
+                ],
+                "plugins": [
+                    "@babel/plugin-syntax-import-meta",
+                    "@babel/plugin-proposal-class-properties",
+                    "@babel/plugin-proposal-json-strings",
+                    [
+                        "@babel/plugin-proposal-decorators",
+                        {
+                            "legacy": true
+                        }
+                    ],
+                    "@babel/plugin-proposal-function-sent",
+                    "@babel/plugin-proposal-export-namespace-from",
+                    "@babel/plugin-proposal-numeric-separator",
+                    "@babel/plugin-proposal-throw-expressions",
+                    "@babel/plugin-proposal-export-default-from",
+                    "@babel/plugin-proposal-logical-assignment-operators",
+                    "@babel/plugin-proposal-optional-chaining",
+                    "@babel/plugin-proposal-nullish-coalescing-operator",
+                    "@babel/plugin-proposal-do-expressions",
+                    "@babel/plugin-proposal-function-bind"
+                ],
+                "babelrc": false,
                 "configFile": false
             }
         }
     },
     "dependencies": {
+        "@babel/polyfill": "^7.2.5",
         "@babel/runtime": "^7.3.1",
         "lodash": "^4.17.5",
         "shortid": "^2.2.8"
