--- a/package.json
+++ b/package.json
@@ -6,82 +6,55 @@
     "main": "./dist/index.js",
     "scripts": {
         "i": "SASS_BINARY_SITE=https://npm.taobao.org/mirrors/node-sass/ npm install --registry=https://registry.npm.taobao.org",
-        "dev": "./node_modules/.bin/webpack-dev-server ",
-        "builddemo": "webpack --config webpack.build.demo.config.js",
-        "buildlib": "webpack --config webpack.build.lib.config.js",
-        "builddll": "webpack --config webpack.dll.config.js",
         "build": "rimraf dist && mkdir dist && rsync -va -progress  ./src/* ./dist && babel src --out-dir dist",
         "test-watch": "export NODE_ENV=test && ava --watch",
-        "test": "export NODE_ENV=test && nyc ava"
+        "test": "export NODE_ENV=test && nyc ava",
+        "test:coverage": ""
     },
     "keywords": [],
     "license": "ISC",
     "repository": {
         "type": "git",
-        "url": "https://github.com/ximing/dxexcel-state"
+        "url": "https://github.com/ximing/xmexcel-model"
     },
     "devDependencies": {
-        "@ava/babel-preset-stage-4": "^2.0.0",
-        "@babel/cli": "^7.2.3",
-        "@babel/core": "^7.2.2",
-        "@babel/helper-module-imports": "^7.0.0",
-        "@babel/plugin-external-helpers": "^7.2.0",
-        "@babel/plugin-proposal-class-properties": "^7.3.0",
-        "@babel/plugin-proposal-decorators": "^7.3.0",
-        "@babel/plugin-proposal-do-expressions": "^7.2.0",
-        "@babel/plugin-proposal-export-default-from": "^7.2.0",
-        "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
-        "@babel/plugin-proposal-function-bind": "^7.2.0",
-        "@babel/plugin-proposal-function-sent": "^7.2.0",
-        "@babel/plugin-proposal-json-strings": "^7.2.0",
-        "@babel/plugin-proposal-logical-assignment-operators": "^7.2.0",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.2.0",
-        "@babel/plugin-proposal-numeric-separator": "^7.2.0",
-        "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
-        "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-        "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
-        "@babel/plugin-proposal-throw-expressions": "^7.2.0",
-        "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-        "@babel/plugin-syntax-import-meta": "^7.2.0",
-        "@babel/plugin-transform-runtime": "^7.2.0",
-        "@babel/preset-env": "^7.3.1",
-        "@babel/preset-react": "^7.0.0",
-        "@babel/register": "^7.0.0",
-        "@babel/types": "^7.3.2",
-        "autoprefixer": "^9.4.7",
-        "ava": "^1.2.1",
+        "@babel/cli": "^7.22.9",
+        "@babel/core": "^7.22.9",
+        "@babel/helper-module-imports": "^7.22.5",
+        "@babel/plugin-external-helpers": "^7.22.5",
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/plugin-proposal-decorators": "^7.22.7",
+        "@babel/plugin-proposal-do-expressions": "^7.22.5",
+        "@babel/plugin-proposal-export-default-from": "^7.22.5",
+        "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+        "@babel/plugin-proposal-function-bind": "^7.22.5",
+        "@babel/plugin-proposal-function-sent": "^7.22.5",
+        "@babel/plugin-proposal-json-strings": "^7.18.6",
+        "@babel/plugin-proposal-logical-assignment-operators": "^7.20.7",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+        "@babel/plugin-proposal-numeric-separator": "^7.18.6",
+        "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+        "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+        "@babel/plugin-proposal-pipeline-operator": "^7.22.5",
+        "@babel/plugin-proposal-throw-expressions": "^7.22.5",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/plugin-syntax-import-meta": "^7.10.4",
+        "@babel/plugin-transform-runtime": "^7.22.9",
+        "@babel/preset-env": "^7.22.9",
+        "@babel/register": "^7.22.5",
+        "@babel/types": "^7.22.5",
+        "ava": "^5.3.1",
         "babel-eslint": "^10.0.1",
-        "babel-loader": "^8.0.5",
         "babel-plugin-lodash": "^3.3.4",
-        "babel-plugin-module-resolver": "^3.2.0",
+        "babel-plugin-module-resolver": "^5.0.0",
         "babel-plugin-transform-decorators-legacy": "^1.3.5",
-        "cross-env": "^5.2.0",
-        "css-loader": "^2.1.0",
-        "env-cmd": "^8.0.2",
-        "eslint": "^5.13.0",
-        "eslint-plugin-react": "^7.12.4",
-        "file-loader": "^3.0.1",
-        "friendly-errors-webpack-plugin": "^1.7.0",
-        "html-webpack-plugin": "^3.2.0",
-        "node-sass": "^4.11.0",
-        "nyc": "^13.2.0",
-        "postcss": "^7.0.14",
-        "postcss-clearfix": "^2.0.1",
-        "postcss-loader": "^3.0.0",
-        "postcss-position": "^1.0.0",
-        "postcss-size": "^3.0.0",
-        "rabjs": "^3.6.1",
-        "react": "^16.8.1",
-        "react-dom": "^16.8.1",
-        "react-hot-loader": "^4.6.5",
-        "regenerator-runtime": "^0.13.1",
-        "rimraf": "^2.6.3",
-        "sass-loader": "^7.1.0",
-        "style-loader": "^0.23.1",
-        "url-loader": "^1.1.2",
-        "webpack": "^4.29.3",
-        "webpack-cli": "^3.2.3",
-        "webpack-dev-server": "^3.1.14"
+        "cross-env": "^7.0.3",
+        "env-cmd": "^10.1.0",
+        "eslint": "^8.45.0",
+        "eslint-plugin-react": "^7.32.2",
+        "nyc": "^15.1.0",
+        "regenerator-runtime": "^0.13.11",
+        "rimraf": "^5.0.1"
     },
     "files": [
         "packages",
@@ -94,75 +67,10 @@
         "node": ">= 5.0.0",
         "npm": ">= 3.0.0"
     },
-    "ava": {
-        "files": [
-            "test/**/*.js",
-            "!test/lib/*.js",
-            "!test/change/op/error/*.js"
-        ],
-        "sources": [
-            "src/**/*.js"
-        ],
-        "cache": false,
-        "concurrency": 4,
-        "failFast": true,
-        "failWithoutAssertions": false,
-        "tap": true,
-        "verbose": true,
-        "compileEnhancements": false,
-        "require": [
-            "./test/_register.js"
-        ],
-        "babel": {
-            "extensions": [
-                "js"
-            ],
-            "testOptions": {
-                "presets": [
-                   [ "@babel/preset-env",{
-                    "targets": {
-                      "node": "current"
-                    },
-                    "modules": false,
-                    "debug": false,
-                    "spec": false,
-                    "loose": false,
-                    "useBuiltIns": false,
-                    "include": [],
-                    "exclude": [],
-                    "forceAllTransforms": false
-                  }]
-                ],
-                "plugins": [
-                    "@babel/plugin-syntax-import-meta",
-                    "@babel/plugin-proposal-class-properties",
-                    "@babel/plugin-proposal-json-strings",
-                    [
-                        "@babel/plugin-proposal-decorators",
-                        {
-                            "legacy": true
-                        }
-                    ],
-                    "@babel/plugin-proposal-function-sent",
-                    "@babel/plugin-proposal-export-namespace-from",
-                    "@babel/plugin-proposal-numeric-separator",
-                    "@babel/plugin-proposal-throw-expressions",
-                    "@babel/plugin-proposal-export-default-from",
-                    "@babel/plugin-proposal-logical-assignment-operators",
-                    "@babel/plugin-proposal-optional-chaining",
-                    "@babel/plugin-proposal-nullish-coalescing-operator",
-                    "@babel/plugin-proposal-do-expressions",
-                    "@babel/plugin-proposal-function-bind"
-                ],
-                "babelrc": false,
-                "configFile": false
-            }
-        }
-    },
     "dependencies": {
         "@babel/polyfill": "^7.2.5",
-        "@babel/runtime": "^7.3.1",
-        "lodash": "^4.17.5",
-        "shortid": "^2.2.8"
+        "@babel/runtime": "^7.22.6",
+        "lodash": "^4.17.21",
+        "shortid": "^2.2.16"
     }
 }
