--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,8 @@ jobs:
           node-version: '10.x'
       - name: npm install
         run: |
-          npm install --registry=https://registry.npmjs.org
-          npm run build
+          npm i -g pnpm
+          pnpm install --registry=https://registry.npmjs.org
+          pnpm run build
         env:
           CI: true
