--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -12,7 +12,9 @@ jobs:
           node-version: 10.x
 
       - name: npm install
-        run: npm install --registry=https://registry.npmjs.org
+        run: |
+          npm i -g pnpm
+          pnpm install --registry=https://registry.npmjs.org
 
       - name: Run tests
         run: npm run test:coverage
