--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "scripts": {
         "i": "SASS_BINARY_SITE=https://npm.taobao.org/mirrors/node-sass/ npm install --registry=https://registry.npm.taobao.org",
         "build": "rimraf dist && mkdir dist && rsync -va -progress  ./src/* ./dist && babel src --out-dir dist",
-        "test-watch": "export NODE_ENV=test && ava --watch",
-        "test": "export NODE_ENV=test && nyc ava",
-        "test:coverage": ""
+        "test:watch": "export NODE_ENV=test && ava --watch",
+        "test": "export NODE_ENV=test && ava",
+        "test:coverage": "c8 ava"
     },
     "keywords": [],
     "license": "ISC",
@@ -48,6 +48,7 @@
         "babel-plugin-lodash": "^3.3.4",
         "babel-plugin-module-resolver": "^5.0.0",
         "babel-plugin-transform-decorators-legacy": "^1.3.5",
+        "c8": "^8.0.0",
         "cross-env": "^7.0.3",
         "env-cmd": "^10.1.0",
         "eslint": "^8.45.0",
