--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build": "rimraf dist && mkdir dist && rsync -va -progress  ./src/* ./dist && babel src --out-dir dist",
         "test:watch": "export NODE_ENV=test && ava --watch",
         "test": "export NODE_ENV=test && ava",
-        "test:coverage": "c8 ava"
+        "test:coverage": "c8 --reporter=lcov npm test"
     },
     "keywords": [],
     "license": "ISC",
@@ -49,6 +49,7 @@
         "babel-plugin-module-resolver": "^5.0.0",
         "babel-plugin-transform-decorators-legacy": "^1.3.5",
         "c8": "^8.0.0",
+        "codecov": "^3.8.3",
         "cross-env": "^7.0.3",
         "env-cmd": "^10.1.0",
         "eslint": "^8.45.0",
